[package]
name = "rts"
version = "0.1.0"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>"]

[dependencies]
clockwork = { path = "../clockwork", version="0.1.0" }
client = { path = "../client", version="0.1.0" }
renderer = { path = "../renderer", version="0.1.0" }
tiles = { path = "../tiles", version="0.1.0" }
audio = { path = "../audio", version = "0.1.0" }

serde_derive = "1.0.0"
serde = "1.0.0"
rand = "*"

