[package]
name = "tiles"
version = "0.1.0"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>"]

[dependencies]
serde = "1.0.0"
serde-xml-rs = { git = "https://github.com/RReverser/serde-xml-rs.git" }
serde_derive = "1.0.0"
renderer = { path = "../renderer", version = "0.1.0" }
rand = "*"

[dev-dependencies]
audio = { path = "../audio", version = "0.1.0" }
sprites = { path = "../sprites", version = "0.1.0" }
pathfinding = "*"

